fix:remove extra spacing and correct footer positioning

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 100%;
+  margin: 0 ;
+  padding: 0;
+
+  text-align: left;
+}
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+
+* {
+  box-sizing: border-box;
 }
 
 .logo {
@@ -106,11 +118,13 @@
 
 .background{
   color: "#ffffff";
+   flex: 1;
+
 }
 .agenda-list {
   text-align: left;        
-  padding-left: 20px;      
-  margin-top: 8px;
+  margin: 0;
+  padding: 0;
 }
 
 .overview {
@@ -123,3 +137,23 @@ body {
   margin: 0;
   padding: 0;
 }
+
+
+header {
+  margin: 0;
+  padding: 0;
+}
+
+/* html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+} */
+
+.app-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
